--- a/presentacio-src/net/conselldemallorca/helium/presentacio/i18n/errors.properties
+++ b/presentacio-src/net/conselldemallorca/helium/presentacio/i18n/errors.properties
@@ -18,6 +18,7 @@ error.expedienttipus.sistra.repetit=Ja existeix un altre tipus d'expedient amb a
 error.expedient.titolrepetit=Ja existeix un expedient d'aquest tipus amb el mateix títol
 error.expedient.numerorepetit=Ja existeix un expedient d'aquest tipus amb el mateix número
 error.camp.codi.char.nok=El codi no pot contenir punts
+error.camp.enumdom.buit=S'ha d'especificar una enumeració o un domini
 error.permis.codi.repetit=Ja existeix un altre rol amb aquest codi
 
 error.validator=Error intern de validació
