0000057: Filtrar tareas pendientes
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium-core/branches/branch-2.0@77 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/presentacio-src/net/conselldemallorca/helium/presentacio/i18n/errors.properties
+++ b/presentacio-src/net/conselldemallorca/helium/presentacio/i18n/errors.properties
@@ -22,3 +22,6 @@ error.camp.enumdom.buit=S'ha d'especificar una enumeració o un domini
 error.permis.codi.repetit=Ja existeix un altre rol amb aquest codi
 
 error.validator=Error intern de validació
+
+error.data.anterior=La data no pot ser anterior al dia d'avui
+error.dataFi.anterior=La data de fi no pot ser anterior a la data d'inici
