--- a/presentacio-src/net/conselldemallorca/helium/presentacio/i18n/errors.properties
+++ b/presentacio-src/net/conselldemallorca/helium/presentacio/i18n/errors.properties
@@ -20,6 +20,7 @@ error.expedient.numerorepetit=Ja existeix un expedient d'aquest tipus amb el mat
 error.camp.codi.char.nok=El codi no pot contenir punts
 error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a continuació una minúscula
 error.camp.enumdom.buit=S'ha d'especificar una enumeració o un domini
+error.camp.enumdom.ambdos=Només s'ha d'especificar un domini o una enumeració
 error.permis.codi.repetit=Ja existeix un altre rol amb aquest codi
 
 error.validator=Error intern de validació
