-- Añadido gestión de cambio de versiones. -- Modificado mantenimiento de mapeos de Sistra.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@131 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -15,6 +15,8 @@ error.carrec.codi.repetit=Ja existeix una altre càrrec amb aquest codi
 error.expedienttipus.codi.repetit=Ja existeix una altre tipus d'expedient amb aquest codi
 error.expedienttipus.desconegut=No s'ha trobat el tipus d'expedient
 error.expedienttipus.sistra.repetit=Ja existeix un altre tipus d'expedient amb aquest mateix identificador
+error.expedienttipus.sistra.mapeig.repetit=Ja existeix un altre mapeig en aquest expedient per aquest mateix codi Helium
+error.mapeigSistra.canviVersio=S'ha produït un error realizant el procés de canvi de versió del mapeig amb Sistra
 error.expedient.titolrepetit=Ja existeix un expedient d'aquest tipus amb el mateix títol
 error.expedient.numerorepetit=Ja existeix un expedient d'aquest tipus amb el mateix número
 error.camp.codi.char.nok=El codi no pot contenir punts
@@ -68,8 +70,8 @@ error.ordre.camp.tasca=No s'ha pogut canviar l'ordre del camp
 error.permisos.disseny.entorn=No té permisos de disseny sobre aquest entorn
 error.exist.exp.defproc=Existeixen expedients amb aquesta definició de procés
 error.arxius.no.valid=Aquest arxiu no és un arxiu d'exportació vàlid
-error.arxiu.importar=Error llegint l'arxiu a importar: 
-error.import.dades=Error en la importació de dades: 
+error.arxiu.importar=Error llegint l'arxiu a importar\: 
+error.import.dades=Error en la importaci\u00F3 de dades\: 
 
 error.despl.arxius.entorn=No té permisos per desplegar arxius a dins aquest entorn
 error.desplegar.arxius=Error desplegant l'arxiu
@@ -178,10 +180,13 @@ error.tasca.no.disponible=Aquesta tasca ja no està disponible
 error.especificar.document=S'ha d'especificar un document
 error.especificar.data=S'ha d'especificar la data
 
-error.generar.document=No s'ha pogut generar el document
-
 error.executar.accio=No s'ha pogut executar l'acció
 error.validar.formulari=No s'ha pogut validar el formulari
 error.restaurar.formulari=No s'ha pogut restaurar el formulari
 error.afegir.camp.multiple=No s'ha pogut afegir el camp múltiple
 error.esborrar.camp.multiple=No s'ha pogut esborrar el camp múltiple
+
+error.updateService.actualitzarVersio=Error actualitzant a la versió
+error.updateService.noScript=No s'ha passat l'script
+error.updateService.contactiAdministrador=Contacti amb el seu administrador abans d'utilitzar l'aplicació.
+
