--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -15,6 +15,7 @@ info.carrec.esborrat=El càrrec s'ha esborrat correctament
 info.infocarrec.guardat=La informació del càrrec s'ha guardat correctament
 info.infocarrec.esborrat=La informació del càrrec s'ha esborrat correctament
 
+
 etiqueta.exp.id=Id de l'expedient
 etiqueta.exp.numero=Número d'expedient
 etiqueta.exp.titol=Títol de l'expedient
@@ -135,6 +136,8 @@ info.informacio.guardat=La informació s'ha guardat correctament
 
 info.token.retrocedit=El token s'ha retrocedit correctament
 
+info.mapeigSistra.esborrat=El mapeig s'ha esborrat correctament
+
 txt.home=Home
 txt.dona=Dona
 info.perfil.guardat=El perfil s'ha guardat amb èxit
@@ -172,8 +175,11 @@ info.dades.form.guardat=Les dades del formulari s'han guardat correctament
 info.formulari.validat=El formulari s'ha validat correctament
 info.formulari.restaurat=El formulari s'ha restaurat correctament
 
+info.mapeigSistra.canviVersio.guardat=El canvi de versió del mapeig amb Sistra s'ha realitzat correctament
+
 ### MISSATGES JSP ###
 
+comuns.adjunts=Adjunts
 comuns.afegir=Afegir
 comuns.amunt=Amunt
 comuns.area=Àrea
@@ -601,6 +607,14 @@ enumeracio.form.comentari=codi1:text1,codi2:text2, ... ,codin:textn
 enumeracio.llistat.enumeracions=Enumeracions
 enumeracio.llistat.confirmacio=Estau segur que voleu esborrar aquesta enumeració?
 enumeracio.llistat.nova=Nova enumeració
+
+exptipus.sistra.selec_codi=Seleccioni un codi
+exptipus.sistra.codihelium=Codi Helium
+exptipus.sistra.codisistra=Codi Sistra
+exptipus.sistra.selec_tipus=Seleccioni un tipus
+exptipus.sistra.mapeigs.vars_variables=Mapeig de variables
+exptipus.sistra.mapeigs.vars_documents=Mapeig de documents
+exptipus.sistra.mapeigs.vars_adjunts=Mapeig d'adjunts
 
 festiu.cal.festius=Festius
 festiu.cal.any_selec=Any seleccionat
