Modificació de la creació d'enumeracions per fer-lo més usable de cara als usuaris.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@137 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -186,6 +186,9 @@ error.restaurar.formulari=No s'ha pogut restaurar el formulari
 error.afegir.camp.multiple=No s'ha pogut afegir el camp múltiple
 error.esborrar.camp.multiple=No s'ha pogut esborrar el camp múltiple
 
+error.no.enumeracio.selec=No s'ha seleccionat cap enumeració
+error.enumeracio.valor.codi.repetit=Ja existeix un valor amb aquest codi
+
 error.updateService.actualitzarVersio=Error actualitzant a la versió
 error.updateService.noScript=No s'ha passat l'script
 error.updateService.contactiAdministrador=Contacti amb el seu administrador abans d'utilitzar l'aplicació.
