--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -15,7 +15,6 @@ info.carrec.esborrat=El càrrec s'ha esborrat correctament
 info.infocarrec.guardat=La informació del càrrec s'ha guardat correctament
 info.infocarrec.esborrat=La informació del càrrec s'ha esborrat correctament
 
-
 etiqueta.exp.id=Id de l'expedient
 etiqueta.exp.numero=Número d'expedient
 etiqueta.exp.titol=Títol de l'expedient
@@ -136,8 +135,6 @@ info.informacio.guardat=La informació s'ha guardat correctament
 
 info.token.retrocedit=El token s'ha retrocedit correctament
 
-info.mapeigSistra.esborrat=El mapeig s'ha esborrat correctament
-
 txt.home=Home
 txt.dona=Dona
 info.perfil.guardat=El perfil s'ha guardat amb èxit
@@ -175,11 +172,8 @@ info.dades.form.guardat=Les dades del formulari s'han guardat correctament
 info.formulari.validat=El formulari s'ha validat correctament
 info.formulari.restaurat=El formulari s'ha restaurat correctament
 
-info.mapeigSistra.canviVersio.guardat=El canvi de versió del mapeig amb Sistra s'ha realitzat correctament
-
 ### MISSATGES JSP ###
 
-comuns.adjunts=Adjunts
 comuns.afegir=Afegir
 comuns.amunt=Amunt
 comuns.area=Àrea
@@ -607,15 +601,12 @@ enumeracio.form.comentari=codi1:text1,codi2:text2, ... ,codin:textn
 
 enumeracio.llistat.enumeracions=Enumeracions
 enumeracio.llistat.confirmacio=Estau segur que voleu esborrar aquesta enumeració?
+enumeracio.llistat.valors=Valors
 enumeracio.llistat.nova=Nova enumeració
+enumeracio.llistat.enumeracions.valors=Valors de l'enumeració
+enumeracio.llistat.valors.nova=Nou valor
 
-exptipus.sistra.selec_codi=Seleccioni un codi
-exptipus.sistra.codihelium=Codi Helium
-exptipus.sistra.codisistra=Codi Sistra
-exptipus.sistra.selec_tipus=Seleccioni un tipus
-exptipus.sistra.mapeigs.vars_variables=Mapeig de variables
-exptipus.sistra.mapeigs.vars_documents=Mapeig de documents
-exptipus.sistra.mapeigs.vars_adjunts=Mapeig d'adjunts
+enumeracio.valors.confirmacio=Estau segur que voleu esborrar aquest registre?
 
 festiu.cal.festius=Festius
 festiu.cal.any_selec=Any seleccionat
