- Adjuntar automaticament documents generats amb plantilla - Error mostrant dominis en vars de tipus registre de la tasca inicial - Revisio mapeig variables registre des de SISTRA
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@138 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -123,6 +123,7 @@ error.esborrar.signatura=No s'ha pogut esborrar la signatura
 
 error.modificar.doc.signat=No es pot modificar un document signat
 error.generar.document=No s'ha pogut generar el document
+error.generar.document.buit=La plantilla ha produit un document buit
 
 error.modificar.dades.exp=No s'han pogut modificar les dades de l'expedient
 
