--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -463,6 +463,7 @@ defproc.docform.emprat_sign=Emprat en la signatura del document
 defproc.docform.codi_custodia=Codi per a la custòdia
 defproc.docform.tipus_doc=Tipus de document
 defproc.docform.codi_doc=Codi del document pel portasignatures
+defproc.docform.adj_auto=Adjuntar automàticament
 
 defproc.docllistat.confirmacio=Estau segur que voleu esborrar aquest registre?
 defproc.docllistat.es_plantillaq=És plantilla?
@@ -771,6 +772,8 @@ tasca.form.form_tasca=Formulari de la tasca
 tasca.form.guardar=Guardar
 tasca.form.validar=Validar
 tasca.form.obrir_form=Obrir formulari extern
+
+tasca.document.generar.confirm=El document generat s'adjuntarà automàticament a la tasca. Voleu continuar?
 
 tasca.gllistat.tasq_pendents=Tasques pendents
 tasca.gllistat.confirmacio=Estau segur que voleu fer-vos càrrec d'aquesta tasca?
