-- Añadidas enumeraciones y dominios a nivel de tipo de expediente.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@139 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -174,6 +174,7 @@ info.formulari.restaurat=El formulari s'ha restaurat correctament
 
 ### MISSATGES JSP ###
 
+comuns.adjunts=Adjunts
 comuns.afegir=Afegir
 comuns.amunt=Amunt
 comuns.area=Àrea
@@ -325,6 +326,8 @@ common.tabsexptipus.estats=Estats
 common.tabsexptipus.definicions=Definicions de procés
 common.tabsexptipus.integ_tram=Integració amb tràmits
 common.tabsexptipus.integ_forms=Integració amb forms
+common.tabsexptipus.dominis=Dominis
+common.tabsexptipus.enumeracions=Enumeracions
 
 common.tabstasca.confirmacio=Estau segur que voleu cancel·lar la delegació?
 common.tabstasca.heu_delegat=Heu delegat aquesta tasca
