- Millora en el canvi de versió - Solucionat error de traspas a Maven faltaven modificacions al JBPM - Llibreria esbcim-wsdl.jar estava compilada amb Java 1.6 i donava errors
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@144 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -190,7 +190,7 @@ error.esborrar.camp.multiple=No s'ha pogut esborrar el camp múltiple
 error.no.enumeracio.selec=No s'ha seleccionat cap enumeració
 error.enumeracio.valor.codi.repetit=Ja existeix un valor amb aquest codi
 
-error.updateService.actualitzarVersio=Error actualitzant a la versió
-error.updateService.noScript=No s'ha passat l'script
-error.updateService.contactiAdministrador=Contacti amb el seu administrador abans d'utilitzar l'aplicació.
+error.update.actualitzar.versio=No s'ha pogut actualitzar a la versió
+error.update.script.ko=L'script de base de dades no ha estat executat
+error.update.proces.ko=Contacti amb el seu administrador abans d'utilitzar l'aplicació.
 
