- Multiidioma al package net.conselldemallorca.helium.core.model.hibernate - Afegit prioritats a les alertes i control sobre les alertes associades a un termini
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@147 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -1,3 +1,7 @@
+##
+# Missatges d'error del package net.conselldemallorca.helium.webapp.mvc
+##
+
 typeMismatch=El contingut d'aquest camp no té el format correcte
 
 not.blank=Per favor, especifiqui algun valor
@@ -190,7 +194,58 @@ error.esborrar.camp.multiple=No s'ha pogut esborrar el camp múltiple
 error.no.enumeracio.selec=No s'ha seleccionat cap enumeració
 error.enumeracio.valor.codi.repetit=Ja existeix un valor amb aquest codi
 
+##
+# Missatges d'error del package net.conselldemallorca.helium.core.model.service
+##
+
+error.personaService.noLogin=La persona #{0} no té el login activat
+error.personaService.noExisteix=La persona #{0} no existeix
+
+error.dissenyService.defprocDesplTipusExp=Aquesta definició de procés ja està desplegada a dins el tipus d'expedient "{0}"
+error.dissenyService.defprocDesplEntorn=Aquesta definició de procés ja està desplegada a dins l'entorn
+error.dissenyService.noConte=L'arxiu no conté cap definició de procés.
+error.dissenyService.noEntorn=No s'ha especificat cap entorn o la definició de procés no correspon amb l'entorn especificat
+error.dissenyService.noTipusExp=No s'ha especificat cap tipus d'expedient o la definició de procés no correspon amb el tipus d'expedient especificat
+error.dissenyService.generantContingut=Error generant el contingut del desplegament
+error.dissenyService.consultantDomini=Error consultant el domini
+error.dissenyService.enumNoDefinida=L'enumeració '{0}' no està definida
+error.dissenyService.dominiNoDefinit=El domini '{0}' no està definit
+
+error.documentService.formatIncorrecte=El format del token és incorrecte
+
+error.dtoConverter.consultarDomini=No s'ha pogut consultar el domini
+
+error.entornService.entornNoTrobat=No s'ha trobat l'entorn amb id: {0}
+
+error.expedientService.jaExisteix=Ja existeix un altre expedient amb el mateix número ({0})
+error.expedientService.noExisteix=No existeix l'expedient per l'entorn
+error.expedientService.generarDocument=No s'ha pogut generar el document
+error.expedientService.trobarPersona=No s'ha trobat la persona amb codi '{0}'
+
+error.orgService.trobarArea=No s'ha trobat l'area amb id: {0}
+error.orgService.trobarPersona=No s'ha trobat la persona amb el codi: {0}
+error.orgService.trobarCarrec=No s'ha trobat el càrrec amb id: {0}
+
+error.pluginService.pujarDocument=No s'ha pogut pujar el document al portasignatures
+error.pluginService.capSignatura=El portasignatures no ha retornat cap signatura
+error.pluginService.noDisponible=Aquest document no està disponible per signar
+
+error.tascaService.noValidada=La tasca no ha estat validada
+error.tascaService.formNoValidat=El formulari no ha estat validat
+error.tascaService.faltenAdjuntar=Falten documents per adjuntar
+error.tascaService.faltenSignar=Falten documents per signar
+error.tascaService.tokenIncorrecte=El format del token és incorrecte
+error.tascaService.docNoDisponible=Aquest document no està disponible per signar
+error.tascaService.generarDocument=No s'ha pogut generar el document
+error.tascaService.cancelarDelegacio=No es pot cancel·lar la delegació d'aquesta tasca
+error.tascaService.noFormExtern=Aquesta tasca no té definit cap formulari extern
+error.tascaService.noTrobada=No s'ha trobat la tasca
+error.tascaService.noAssignada=Aquest usuari no té aquesta tasca assignada
+error.tascaService.noDisponible=Aquesta tasca no està disponible
+
+error.terminiService.noIniciat=El termini no està iniciat
+error.terminiService.noPausat=El termini no està pausat
+
 error.update.actualitzar.versio=No s'ha pogut actualitzar a la versió
 error.update.script.ko=L'script de base de dades no ha estat executat
 error.update.proces.ko=Contacti amb el seu administrador abans d'utilitzar l'aplicació.
-
