--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1,3 +1,7 @@
+##
+# Missatges del package net.conselldemallorca.helium.webapp.mvc
+##
+
 salutacio=Bon dia
 
 info.area.guardat=L'àrea s'ha guardat correctament
@@ -81,14 +85,11 @@ info.entorn.dades.importat=Les dades de l'entorn s'han importat correctament
 info.enum.guardat=L'enumeració s'ha guardat correctament
 info.enum.esborrat=L'enumeració s'ha esborrat correctament
 
-#ExpedientConsultaController.java
-#txt.iniciat=Iniciat
-#txt.finalitzat=Finalitzat
+txt.iniciat=Iniciat
+txt.finalitzat=Finalitzat
 
-#ExpedientConsultaDissenyController.java
-#txt.si=Si
-#txt.no=No
-#txt.netejar=netejar
+txt.si=Si
+txt.no=No
 
 info.expedient.esborrat=L'expedient s'ha esborrat correctament
 info.accio.executat=L'acció s'ha executat correctament
@@ -172,7 +173,9 @@ info.dades.form.guardat=Les dades del formulari s'han guardat correctament
 info.formulari.validat=El formulari s'ha validat correctament
 info.formulari.restaurat=El formulari s'ha restaurat correctament
 
-### MISSATGES JSP ###
+##
+# Missatges dels fitxers .jsp localitzats a /WEB-INF/
+##
 
 comuns.adjunts=Adjunts
 comuns.afegir=Afegir
@@ -231,6 +234,18 @@ alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
 alerta.llistat.creada_el=Creada el
 alerta.llistat.expedient=Expedient
+alerta.llistat.causa=Causa
+alerta.llistat.missatge=Missatge
+alerta.llistat.apunt_dexpirar=Està a punt d'expirar
+alerta.llistat.expirat=Ha expirat
+alerta.llistat.completat_atemps=S'ha completat dins el termini
+alerta.llistat.completat_fora=S'ha completat fora de termini
+alerta.llistat.prioritat=Prioritat
+alerta.llistat.m_baixa=Molt baixa
+alerta.llistat.baixa=Baixa
+alerta.llistat.normal=Normal
+alerta.llistat.alta=Alta
+alerta.llistat.m_alta=Molt alta
 alerta.llistat.text=Text
 alerta.llistat.data_limit=Data límit
 alerta.llistat.marcar_llegida=Marcar com a llegida
@@ -543,6 +558,7 @@ defproc.termform.dies_previs=Dies previs per alerta
 defproc.termform.es_generara=Es generarà una alerta els dies especificats abans de finalitzar el termini. Si es deixa buit no es generarà cap alerta.
 defproc.termform.gen_alert_previa=Generar alerta prèvia?
 defproc.termform.gen_alert_final=Generar alerta final?
+defproc.termform.gen_alert_complet=Generar alerta en completar el procés?
 
 defproc.termllist.confirmacio=Estau segur que voleu esborrar aquest termini?
 defproc.termllist.durada=Durada
