-- Importación y Exportación de Tipos de expedientes.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@148 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_ca.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_ca.properties
@@ -48,7 +48,8 @@ info.defproc.esborrat=La definició de procés s'ha esborrat correctament
 info.dades.importat=Les dades s'han importat correctament
 
 txt.desplegament.jbpm=Desplegament jBPM
-txt.exportacio.helium=Exportació Helium
+txt.exportacio.definicioProces=Exportació Definició de Procés
+txt.exportacio.tipusExpedient=Exportació Tipus d'Expedient
 info.arxiu.desplegat=L'arxiu s'ha desplegat amb èxit
 
 info.document.esborrat=El document s'ha esborrat correctament
@@ -601,6 +602,14 @@ enumeracio.form.comentari=codi1:text1,codi2:text2, ... ,codin:textn
 enumeracio.llistat.enumeracions=Enumeracions
 enumeracio.llistat.confirmacio=Estau segur que voleu esborrar aquesta enumeració?
 enumeracio.llistat.nova=Nova enumeració
+
+exptipus.sistra.mapeigs.vars_variables=Mapeig de variables
+exptipus.sistra.mapeigs.vars_documents=Mapeig de documents
+exptipus.sistra.mapeigs.vars_adjunts=Mapeig de documents com adjunts
+exptipus.sistra.selec_codi=Selecciona un codi
+exptipus.sistra.codihelium=Codi Helium
+exptipus.sistra.codisistra=Codi Sistra
+
 
 festiu.cal.festius=Festius
 festiu.cal.any_selec=Any seleccionat
