- Afegit filtre per georeferència a la consulta general - Afegida nova funció consultaExpedients en el web service de tramitació
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@156 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1,8 +1,19 @@
-##
-# Missatges del package net.conselldemallorca.helium.webapp.mvc
-##
-
 salutacio=Bon dia
+expedient.consulta.titol=T\u00EDtol
+expedient.consulta.numero=N\u00FAmero
+expedient.consulta.datainici=Data d'inici
+expedient.consulta.i=i
+expedient.consulta.tipusexpedient=Tipus d'expedient
+expedient.consulta.select.tipusexpedient=Seleccioni un tipus d'expedient
+expedient.consulta.select.estat=Seleccioni un estat
+expedient.consulta.estat=Estat
+expedient.consulta.entre=Entre
+expedient.consulta.consultar=Consultar
+expedient.consulta.netejar=Netejar
+comuns.georeferencia.codi=Codi georeferencial
+comuns.georeferencia.coordenades=Coordenades georeferència
+comuns.georeferencia.coordX=X: 
+comuns.georeferencia.coordY=Y: 
 
 info.area.guardat=L'àrea s'ha guardat correctament
 info.area.esborrat=L'àrea s'ha esborrat correctament
@@ -52,7 +63,8 @@ info.defproc.esborrat=La definició de procés s'ha esborrat correctament
 info.dades.importat=Les dades s'han importat correctament
 
 txt.desplegament.jbpm=Desplegament jBPM
-txt.exportacio.helium=Exportació Helium
+txt.exportacio.definicioProces=Exportació Definició de Procés
+txt.exportacio.tipusExpedient=Exportació Tipus d'Expedient
 info.arxiu.desplegat=L'arxiu s'ha desplegat amb èxit
 
 info.document.esborrat=El document s'ha esborrat correctament
@@ -85,11 +97,14 @@ info.entorn.dades.importat=Les dades de l'entorn s'han importat correctament
 info.enum.guardat=L'enumeració s'ha guardat correctament
 info.enum.esborrat=L'enumeració s'ha esborrat correctament
 
-txt.iniciat=Iniciat
-txt.finalitzat=Finalitzat
+#ExpedientConsultaController.java
+#txt.iniciat=Iniciat
+#txt.finalitzat=Finalitzat
 
-txt.si=Si
-txt.no=No
+#ExpedientConsultaDissenyController.java
+#txt.si=Si
+#txt.no=No
+#txt.netejar=netejar
 
 info.expedient.esborrat=L'expedient s'ha esborrat correctament
 info.accio.executat=L'acció s'ha executat correctament
@@ -173,11 +188,8 @@ info.dades.form.guardat=Les dades del formulari s'han guardat correctament
 info.formulari.validat=El formulari s'ha validat correctament
 info.formulari.restaurat=El formulari s'ha restaurat correctament
 
-##
-# Missatges dels fitxers .jsp localitzats a /WEB-INF/
-##
+### MISSATGES JSP ###
 
-comuns.adjunts=Adjunts
 comuns.afegir=Afegir
 comuns.amunt=Amunt
 comuns.area=Àrea
@@ -234,18 +246,6 @@ alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
 alerta.llistat.creada_el=Creada el
 alerta.llistat.expedient=Expedient
-alerta.llistat.causa=Causa
-alerta.llistat.missatge=Missatge
-alerta.llistat.apunt_dexpirar=Està a punt d'expirar
-alerta.llistat.expirat=Ha expirat
-alerta.llistat.completat_atemps=S'ha completat dins el termini
-alerta.llistat.completat_fora=S'ha completat fora de termini
-alerta.llistat.prioritat=Prioritat
-alerta.llistat.m_baixa=Molt baixa
-alerta.llistat.baixa=Baixa
-alerta.llistat.normal=Normal
-alerta.llistat.alta=Alta
-alerta.llistat.m_alta=Molt alta
 alerta.llistat.text=Text
 alerta.llistat.data_limit=Data límit
 alerta.llistat.marcar_llegida=Marcar com a llegida
@@ -341,8 +341,6 @@ common.tabsexptipus.estats=Estats
 common.tabsexptipus.definicions=Definicions de procés
 common.tabsexptipus.integ_tram=Integració amb tràmits
 common.tabsexptipus.integ_forms=Integració amb forms
-common.tabsexptipus.dominis=Dominis
-common.tabsexptipus.enumeracions=Enumeracions
 
 common.tabstasca.confirmacio=Estau segur que voleu cancel·lar la delegació?
 common.tabstasca.heu_delegat=Heu delegat aquesta tasca
@@ -389,7 +387,6 @@ decorators.default.benvinguts=Benvinguts
 decorators.default.autenticat_amb=Autenticat actualment amb l'usuari
 decorators.default.sortir=Sortir
 decorators.default.usuari=Usuari
-decorators.default.cerca=Cerca
 
 decorators.entorn.entorn=Entorn
 decorators.entorn.permisos=Permisos
@@ -481,7 +478,6 @@ defproc.docform.emprat_sign=Emprat en la signatura del document
 defproc.docform.codi_custodia=Codi per a la custòdia
 defproc.docform.tipus_doc=Tipus de document
 defproc.docform.codi_doc=Codi del document pel portasignatures
-defproc.docform.adj_auto=Adjuntar automàticament
 
 defproc.docllistat.confirmacio=Estau segur que voleu esborrar aquest registre?
 defproc.docllistat.es_plantillaq=És plantilla?
@@ -558,7 +554,6 @@ defproc.termform.dies_previs=Dies previs per alerta
 defproc.termform.es_generara=Es generarà una alerta els dies especificats abans de finalitzar el termini. Si es deixa buit no es generarà cap alerta.
 defproc.termform.gen_alert_previa=Generar alerta prèvia?
 defproc.termform.gen_alert_final=Generar alerta final?
-defproc.termform.gen_alert_complet=Generar alerta en completar el procés?
 
 defproc.termllist.confirmacio=Estau segur que voleu esborrar aquest termini?
 defproc.termllist.durada=Durada
@@ -621,12 +616,15 @@ enumeracio.form.comentari=codi1:text1,codi2:text2, ... ,codin:textn
 
 enumeracio.llistat.enumeracions=Enumeracions
 enumeracio.llistat.confirmacio=Estau segur que voleu esborrar aquesta enumeració?
-enumeracio.llistat.valors=Valors
 enumeracio.llistat.nova=Nova enumeració
-enumeracio.llistat.enumeracions.valors=Valors de l'enumeració
-enumeracio.llistat.valors.nova=Nou valor
 
-enumeracio.valors.confirmacio=Estau segur que voleu esborrar aquest registre?
+exptipus.sistra.mapeigs.vars_variables=Mapeig de variables
+exptipus.sistra.mapeigs.vars_documents=Mapeig de documents
+exptipus.sistra.mapeigs.vars_adjunts=Mapeig de documents com adjunts
+exptipus.sistra.selec_codi=Selecciona un codi
+exptipus.sistra.codihelium=Codi Helium
+exptipus.sistra.codisistra=Codi Sistra
+
 
 festiu.cal.festius=Festius
 festiu.cal.any_selec=Any seleccionat
@@ -791,8 +789,6 @@ tasca.form.form_tasca=Formulari de la tasca
 tasca.form.guardar=Guardar
 tasca.form.validar=Validar
 tasca.form.obrir_form=Obrir formulari extern
-
-tasca.document.generar.confirm=El document generat s'adjuntarà automàticament a la tasca. Voleu continuar?
 
 tasca.gllistat.tasq_pendents=Tasques pendents
 tasca.gllistat.confirmacio=Estau segur que voleu fer-vos càrrec d'aquesta tasca?
