--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_ca.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_ca.properties
@@ -1,4 +1,20 @@
 salutacio=Bon dia
+expedient.consulta.gis=Obre en visor GIS
+expedient.consulta.titol=T\u00EDtol
+expedient.consulta.numero=N\u00FAmero
+expedient.consulta.datainici=Data d'inici
+expedient.consulta.i=i
+expedient.consulta.tipusexpedient=Tipus d'expedient
+expedient.consulta.select.tipusexpedient=Seleccioni un tipus d'expedient
+expedient.consulta.select.estat=Seleccioni un estat
+expedient.consulta.estat=Estat
+expedient.consulta.entre=Entre
+expedient.consulta.consultar=Consultar
+expedient.consulta.netejar=Netejar
+comuns.georeferencia.codi=Codi georeferencial
+comuns.georeferencia.coordenades=Coordenades georeferència
+comuns.georeferencia.coordX=X\: 
+comuns.georeferencia.coordY=Y\: 
 
 info.area.guardat=L'àrea s'ha guardat correctament
 info.area.esborrat=L'àrea s'ha esborrat correctament
