Anula·lació d'expedients
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@157 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -113,9 +113,11 @@ error.cercar.entorns=Error cercant entorns actius
 error.esborrar.enum=No s'ha pogut esborrar l'enumeració
 
 error.esborrar.expedient=No s'ha pogut esborrar l'expedient
+error.anular.expedient=No s'ha pogut anul·lar l'expedient
 error.permisos.esborrar.expedient=No té permisos per esborrar aquest expedient
 error.permisos.consultar.expedient=No té permisos per consultar aquest expedient
 error.permisos.modificar.expedient=No té permisos per modificar aquest expedient
+error.permisos.anular.expedient=No té permisos per anul·lar aquest expedient
 
 error.esborrar.dada.proces=No s'ha pogut esborrar la dada del procés
 error.esborrar.dada.tasca=No s'ha pogut esborrar la dada de la tasca
