--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_ca.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_ca.properties
@@ -108,6 +108,7 @@ info.enum.esborrat=L'enumeració s'ha esborrat correctament
 #txt.netejar=netejar
 
 info.expedient.esborrat=L'expedient s'ha esborrat correctament
+info.expedient.anulat=L'expedient s'ha anul·lat correctament
 info.accio.executat=L'acció s'ha executat correctament
 
 info.dada.creat=La dada s'ha creat correctament
@@ -232,6 +233,7 @@ comuns.tipus=Tipus
 comuns.titol=Títol
 comuns.tornar=Tornar
 comuns.variables=Variables
+comuns.anular=Anular
 
 comuns.camps_marcats=Els camps marcats amb
 comuns.camp_oblig=Camp obligatori
@@ -853,7 +855,7 @@ tasca.signa.no_te_suport=No te suport per applets Java 2 SDK, Standard Edition v
 tasca.signa.signar=Signar
 tasca.signa.tipus_no_sup=Tipus de signatura no suportat
 tasca.signa.docs_marcats=Els documents marcats amb
-tasca.signa.son_sign_oblig=són de singnatura obligatòria
+tasca.signa.son_sign_oblig=són de signatura obligatòria
 
 error.error=Error
 error.sa_produit=S'ha produït un error a l'aplicació
